support gemma & release v1.4.2 & 010508c
